--- a/MowerPowerEngineV1/MowerPowerEngineV1/MowerPowerEngineV1.vcxproj
+++ b/MowerPowerEngineV1/MowerPowerEngineV1/MowerPowerEngineV1.vcxproj
@@ -139,14 +139,21 @@
   <ItemGroup>
     <ClCompile Include="Basic_Shader_Manager\cShader.cpp" />
     <ClCompile Include="Basic_Shader_Manager\cShaderManager.cpp" />
+    <ClCompile Include="cVAOManager\cVAOManager.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PlyFileLoaders.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Basic_Shader_Manager\cShaderManager.h" />
+    <ClInclude Include="cVAOManager\cVAOManager.h" />
     <ClInclude Include="GLCommon.h" />
     <ClInclude Include="PlyFileLoaders.h" />
+    <ClInclude Include="sMesh.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\shaders\fragment01.glsl" />
+    <None Include="assets\shaders\vertex01.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
